SERVER-82967 Unregister index builds that fail during set up